Create logos and modify ui

--- a/src/client.html
+++ b/src/client.html
@@ -19,7 +19,8 @@
     <input type="text" id="text" class="input">
     <button id="encrypt">Encriptar</button>
     <button id="decrypt">Desencriptar</button>
-    <div id="result"></div>
+    <label for="result">Resultado</label>
+    <textarea id="result" name="name" rows="8" cols="80"></textarea>
   </div>
   <script type="text/javascript">
     require('./client')
